--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Paula &amp; Austin | Wedding</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400&display=swap"
-    rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body id="top">
 
-  <!-- Top Navigation -->
   <div class="topnav" id="myTopnav">
     <a href="#top" class="logo">P &amp; A</a>
     <a href="#location">Location</a>
@@ -25,7 +22,6 @@
     <a href="javascript:void(0);" class="icon" onclick="toggleNav()">&#9776;</a>
   </div>
 
-  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
       <h1>Paula &amp; Austin</h1>
@@ -33,19 +29,17 @@
     </div>
   </section>
 
-  <!-- Location Section -->
   <section id="location" class="section map">
     <div class="container">
       <h2>Location</h2>
       <p>Join us at our beautiful venue in Tielmes.</p>
       <p>We'll be celebrating at the "Casa Rural Vega de Tielmes"</p>
       <p>Calle de Cercado, 28550, Tielmes, Madrid</p>
-      <p>It's the first house to the left at the bottom of the hill. You won't be able to miss it.</p>
+      <p>It's the first house to the left at the bottom of the hill. You won't miss it.</p>
       <p><a class="map-link" href="https://g.co/kgs/UA6YHBm" target="_blank" rel="noopener">Find it here on Google Maps</a></p>
     </div>
   </section>
 
-  <!-- Schedule Section -->
   <section id="schedule" class="section">
     <div class="container">
       <h2>Schedule</h2>
@@ -53,41 +47,37 @@
     </div>
   </section>
 
-  <!-- Transport Section -->
   <section id="transport" class="section">
     <div class="container">
       <h2>Getting To &amp; From</h2>
-      <p>We recommend taking taxis or ride-shares from the city center to the venue. There are shuttle buses departing from Tielmes station at 4:00 PM. If driving, free parking is available on-site.</p>
+      <p>We recommend taxis or ride-shares from the city center. Shuttle buses depart Tielmes station at 4:00 PM. Free on-site parking available.</p>
     </div>
   </section>
 
-  <!-- Accommodations Section -->
   <section id="accommodations" class="section">
     <div class="container">
       <h2>Where To Stay</h2>
       <ul>
-        <li><strong>Hotel Rural Vega:</strong> Charming country inn adjacent to the venue.</li>
-        <li><strong>Posada La Venta:</strong> Historic inn in Tielmes center.</li>
-        <li><strong>Hostal Madrid:</strong> Affordable motel in the nearby town.</li>
+        <li><strong>Hotel Rural Vega:</strong> Charming inn next to venue.</li>
+        <li><strong>Posada La Venta:</strong> Historic inn in town center.</li>
+        <li><strong>Hostal Madrid:</strong> Affordable lodging nearby.</li>
       </ul>
-      <p>Use code <em>PAULA-AUSTIN</em> for a 10% discount at any of these locations.</p>
+      <p>Use code <em>PAULA-AUSTIN</em> for 10% off.</p>
     </div>
   </section>
 
-  <!-- FAQs Section -->
   <section id="faqs" class="section">
     <div class="container">
       <h2>FAQs</h2>
       <ul>
-        <li><strong>Dress Code:</strong> Cocktail attire. Expect warm weather—light fabrics recommended.</li>
-        <li><strong>Dietary Restrictions:</strong> Please let us know on the RSVP form if you have any allergies.</li>
-        <li><strong>Children:</strong> Adults-only event, please.</li>
-        <li><strong>Weather:</strong> Ceremony will be outdoors. In case of rain, we have an indoor backup.</li>
+        <li><strong>Dress Code:</strong> Cocktail attire; light fabrics.</li>
+        <li><strong>Dietary:</strong> Let us know of allergies on RSVP.</li>
+        <li><strong>Children:</strong> Adults-only please.</li>
+        <li><strong>Weather:</strong> Outdoors; backup indoors if rain.</li>
       </ul>
     </div>
   </section>
 
-  <!-- RSVP Section -->
   <section id="rsvp" class="section">
     <div class="container">
       <h2>RSVP</h2>
@@ -96,94 +86,63 @@
     </div>
   </section>
 
-  
-  <!-- Wedding Party Section -->
   <section id="party" class="section">
     <div class="container">
       <h2>Wedding Party</h2>
       <div class="party-grid">
-        <!-- Bride's Party Column -->
         <div class="party-column">
           <h3>Bride's Party</h3>
-          <div class="party-item">
-            <img src="images/damas/dani.jpeg" alt="Bridesmaid 1"/>
-            <p>Dani</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/laia.jpeg" alt="Bridesmaid 2"/>
-            <p>Laia</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/natalie.jpeg" alt="Bridesmaid 3"/>
-            <p>Natalie</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/vero.jpeg" alt="Bridesmaid 4"/>
-            <p>Vero</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/merche.jpeg" alt="Bridesmaid 5"/>
-            <p>Merche</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/marina.jpeg" alt="Bridesmaid 6"/>
-            <p>Marina</p>
-          </div>
-          </div>
+          <div class="party-item"><img src="images/damas/dani.jpeg" alt="Dani"/><p>Dani</p></div>
+          <div class="party-item"><img src="images/damas/laia.jpeg" alt="Laia"/><p>Laia</p></div>
+          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p>Natalie</p></div>
+          <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p>Vero</p></div>
+          <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p>Merche</p></div>
+          <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p>Marina</p></div>
+          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p>Zoe</p></div>
         </div>
-        <!-- Groom's Party Column -->
         <div class="party-column">
           <h3>Groom's Party</h3>
+          <div class="party-item"><img src="images/bestmen/zack.jpeg" alt="Zack"/><p>Zack</p></div>
+          <div class="party-item"><img src="images/bestmen/dimi.jpeg" alt="Dimi"/><p>Dimi</p></div>
+          <div class="party-item"><img src="images/bestmen/jamie.jpg" alt="Jamie"/><p>Jamie</p></div>
+          <div class="party-item"><img src="images/bestmen/maxime.jpeg" alt="Maxime"/><p>Maxime</p></div>
+          <div class="party-item"><img src="images/bestmen/alba.jpeg" alt="Alba"/><p>Alba</p></div>
+          <div class="party-item"><img src="images/bestmen/guille.jpeg" alt="Tim"/><p>Guille</p></div>
+          <div class="party-item"><img src="images/bestmen/noah.jpeg" alt="Noah"/><p>Noah</p></div>
+        </div>
+      </div>
+    </div>
+  
+  <!-- Officiants Section -->
+  <section id="officiants" class="section">
+    <div class="container">
+      <h2>Officiants</h2>
+      <div class="party-grid">
+        <div class="party-column">
           <div class="party-item">
-            <img src="images/bestmen/zack.jpeg" alt="Groomsman 1"/>
-            <p>Zack</p>
+            <img src="images/damas/scott.jpeg" alt="Scott"/>
+            <p>Scott</p>
           </div>
+        </div>
+        <div class="party-column">
           <div class="party-item">
-            <img src="images/bestmen/dimi.jpeg" alt="Groomsman 2"/>
-            <p>Dimi</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/jamie.jpg" alt="Groomsman 3"/>
-            <p>Jamie 3</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/maxime.jpeg" alt="Groomsman 4"/>
-            <p>Maxime 4</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/alba.jpeg" alt="Groomsman 5"/>
-            <p>Alba</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/tim.jpeg" alt="Groomsman 6"/>
+            <img src="images/bestmen/tim.jpeg" alt="Tim"/>
             <p>Tim</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/noah.jpeg" alt="Groomsman 7"/>
-            <p>Noah</p>
-          <div class="party-item">
-            <img src="images/bestmen/guille.jpeg" alt="Groomsman 7"/>
-            <p>Guille</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+</section>
 
-
-  <!-- Footer -->
   <footer>
-    <div class="container">
-      <p>&copy; Paula &amp; Austin, 2025</p>
-    </div>
+    <div class="container"><p>&copy; Paula &amp; Austin, 2025</p></div>
   </footer>
 
-  <!-- JavaScript for nav toggle -->
   <script>
     function toggleNav() {
       var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") { x.className += " responsive"; }
-      else { x.className = "topnav"; }
+      x.className = x.className === "topnav" ? "topnav responsive" : "topnav";
     }
   </script>
 </body>
