--- a/index_es.html
+++ b/index_es.html
@@ -1,12 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Paula &amp; Austin | Boda</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400&display=swap"
-    rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body id="top">
@@ -17,7 +16,7 @@
     <a href="#schedule">Programa</a>
     <a href="#transport">Cómo Llegar</a>
     <a href="#accommodations">Alojamiento</a>
-    <a href="#faqs">Preguntas</a>
+    <a href="#faqs">Preguntas Frecuentes</a>
     <a href="#rsvp">RSVP</a>
     <a href="#party">Cortejo</a>
     <div class="lang-switch"><a href="index.html">EN</a></div>
@@ -35,7 +34,7 @@
     <div class="container">
       <h2>Ubicación</h2>
       <p>Acompáñanos en nuestro hermoso lugar en Tielmes.</p>
-      <p>Celebramos en la "Casa Rural Vega de Tielmes"</p>
+      <p>Celebraremos en la "Casa Rural Vega de Tielmes"</p>
       <p>Calle de Cercado, 28550, Tielmes, Madrid</p>
       <p>Es la primera casa a la izquierda al pie de la colina. No te la puedes perder.</p>
       <p><a class="map-link" href="https://g.co/kgs/UA6YHBm" target="_blank" rel="noopener">Encuéntralo en Google Maps</a></p>
@@ -52,7 +51,7 @@
   <section id="transport" class="section">
     <div class="container">
       <h2>C&#243;mo Llegar</h2>
-      <p>Recomendamos tomar taxis o servicios de viaje compartido desde el centro hasta el lugar. Hay autobuses lanzadera desde la estación de Tielmes a las 16:00 h. Si conduces, hay estacionamiento gratuito en el lugar.</p>
+      <p>Recomendamos taxis o servicios de viaje compartido desde el centro. Hay autobuses lanzadera desde la estación de Tielmes a las 16:00 h. Estacionamiento gratuito disponible.</p>
     </div>
   </section>
 
@@ -60,11 +59,11 @@
     <div class="container">
       <h2>Alojamiento</h2>
       <ul>
-        <li><strong>Hotel Rural Vega:</strong> Encantadora posada adyacente al lugar.</li>
-        <li><strong>Posada La Venta:</strong> Posada histórica en el centro de Tielmes.</li>
-        <li><strong>Hostal Madrid:</strong> Motel económico en la localidad cercana.</li>
+        <li><strong>Hotel Rural Vega:</strong> Encantadora posada junto al lugar.</li>
+        <li><strong>Posada La Venta:</strong> Posada histórica en el centro.</li>
+        <li><strong>Hostal Madrid:</strong> Alojamiento económico cercano.</li>
       </ul>
-      <p>Usa el código <em>PAULA-AUSTIN</em> para un 10% de descuento en cualquiera de estos alojamientos.</p>
+      <p>Usa el código <em>PAULA-AUSTIN</em> para 10% de descuento.</p>
     </div>
   </section>
 
@@ -72,10 +71,10 @@
     <div class="container">
       <h2>Preguntas Frecuentes</h2>
       <ul>
-        <li><strong>Código de Vestimenta:</strong> Cocktail. Espera clima cálido—se recomiendan telas ligeras.</li>
-        <li><strong>Restricciones Alimentarias:</strong> Indícanos en el formulario RSVP si tienes alguna alergia.</li>
-        <li><strong>Niños:</strong> Evento solo para adultos, por favor.</li>
-        <li><strong>Clima:</strong> Ceremonia al aire libre. En caso de lluvia, hay espacio interior de respaldo.</li>
+        <li><strong>Código de vestimenta:</strong> Cocktail; telas ligeras.</li>
+        <li><strong>Alimentación:</strong> Indícanos alergias en el RSVP.</li>
+        <li><strong>Niños:</strong> Solo adultos.</li>
+        <li><strong>Clima:</strong> Ceremonia al aire libre; backup interior si llueve.</li>
       </ul>
     </div>
   </section>
@@ -83,95 +82,66 @@
   <section id="rsvp" class="section">
     <div class="container">
       <h2>RSVP</h2>
-      <p>Por favor confirma tu asistencia antes del 1 de agosto de 2025.</p>
+      <p>Por favor, confirma tu asistencia antes del 1 de agosto de 2025.</p>
       <a class="rsvp-button" href="https://forms.gle/your-google-form-link-here" target="_blank" rel="noopener">RSVP Aquí</a>
     </div>
   </section>
 
-  <!-- Wedding Party Section -->
   <section id="party" class="section">
     <div class="container">
       <h2>Cortejo</h2>
       <div class="party-grid">
-        <!-- Bride's Party Column -->
         <div class="party-column">
-          <h3>Bride's Party</h3>
+          <h3>Damas de Honor</h3>
+          <div class="party-item"><img src="images/damas/dani.jpeg" alt="Dani"/><p>Dani</p></div>
+          <div class="party-item"><img src="images/damas/laia.jpeg" alt="Laia"/><p>Laia</p></div>
+          <div class="party-item"><img src="images/damas/natalie.jpeg" alt="Natalie"/><p>Natalie</p></div>
+          <div class="party-item"><img src="images/damas/vero.jpeg" alt="Vero"/><p>Vero</p></div>
+          <div class="party-item"><img src="images/damas/merche.jpeg" alt="Merche"/><p>Merche</p></div>
+          <div class="party-item"><img src="images/damas/marina.jpeg" alt="Marina"/><p>Marina</p></div>
+          <div class="party-item"><img src="images/damas/zoe.jpeg" alt="Zoe"/><p>Zoe</p></div>
+        </div>
+        <div class="party-column">
+          <h3>Padrinos</h3>
+          <div class="party-item"><img src="images/bestmen/zack.jpeg" alt="Zack"/><p>Zack</p></div>
+          <div class="party-item"><img src="images/bestmen/dimi.jpeg" alt="Dimi"/><p>Dimi</p></div>
+          <div class="party-item"><img src="images/bestmen/jamie.jpg" alt="Jamie"/><p>Jamie</p></div>
+          <div class="party-item"><img src="images/bestmen/maxime.jpeg" alt="Maxime"/><p>Maxime</p></div>
+          <div class="party-item"><img src="images/bestmen/alba.jpeg" alt="Alba"/><p>Alba</p></div>
+          <div class="party-item"><img src="images/bestmen/guille.jpeg" alt="Guille"/><p>Tim</p></div>
+          <div class="party-item"><img src="images/bestmen/noah.jpeg" alt="Noah"/><p>Noah</p></div>
+        </div>
+      </div>
+    </div>
+  
+  <!-- Sección de Oficiantes -->
+  <section id="officiants" class="section">
+    <div class="container">
+      <h2>Oficiantes</h2>
+      <div class="party-grid">
+        <div class="party-column">
           <div class="party-item">
-            <img src="images/damas/dani.jpeg" alt="Bridesmaid 1"/>
-            <p>Dani</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/laia.jpeg" alt="Bridesmaid 2"/>
-            <p>Laia</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/natalie.jpeg" alt="Bridesmaid 3"/>
-            <p>Natalie</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/vero.jpeg" alt="Bridesmaid 4"/>
-            <p>Vero</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/merche.jpeg" alt="Bridesmaid 5"/>
-            <p>Merche</p>
-          </div>
-          <div class="party-item">
-            <img src="images/damas/marina.jpeg" alt="Bridesmaid 6"/>
-            <p>Marina</p>
-          </div>
+            <img src="images/damas/scott.jpeg" alt="Scott"/>
+            <p>Scott</p>
           </div>
         </div>
-        <!-- Groom's Party Column -->
         <div class="party-column">
-          <h3>Groom's Party</h3>
           <div class="party-item">
-            <img src="images/bestmen/zack.jpeg" alt="Groomsman 1"/>
-            <p>Zack</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/dimi.jpeg" alt="Groomsman 2"/>
-            <p>Dimi</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/jamie.jpg" alt="Groomsman 3"/>
-            <p>Jamie 3</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/maxime.jpeg" alt="Groomsman 4"/>
-            <p>Maxime 4</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/alba.jpeg" alt="Groomsman 5"/>
-            <p>Alba</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/tim.jpeg" alt="Groomsman 6"/>
+            <img src="images/bestmen/tim.jpeg" alt="Tim"/>
             <p>Tim</p>
-          </div>
-          <div class="party-item">
-            <img src="images/bestmen/noah.jpeg" alt="Groomsman 7"/>
-            <p>Noah</p>
-          <div class="party-item">
-            <img src="images/bestmen/guille.jpeg" alt="Groomsman 7"/>
-            <p>Guille</p>
           </div>
         </div>
       </div>
     </div>
   </section>
+</section>
 
-  <footer>
-    <div class="container">
-      <p>&copy; Paula &amp; Austin, 2025</p>
-    </div>
-  </footer>
+  <footer><div class="container"><p>&copy; Paula &amp; Austin, 2025</p></div></footer>
 
   <script>
     function toggleNav() {
       var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") { x.className += " responsive"; }
-      else { x.className = "topnav"; }
+      x.className = x.className === "topnav" ? "topnav responsive" : "topnav";
     }
   </script>
 </body>
