--- a/index_es.html
+++ b/index_es.html
@@ -20,7 +20,7 @@
     <a href="#rsvp">RSVP</a>
     <a href="#party">Cortejo</a>
     <div class="lang-switch"><a href="index.html">EN</a></div>
-    <a href="javascript:void(0);" class="icon" onclick="toggleNav()">&#9776;</a>
+    <a href="javascript:void(0);" class="icon" >&#9776;</a>
   </div>
 
   <section class="hero">
@@ -140,9 +140,8 @@
 
   <script>
     function toggleNav() {
-      var x = document.getElementById("myTopnav");
-      x.className = x.className === "topnav" ? "topnav responsive" : "topnav";
-    }
+    document.getElementById("myTopnav").classList.toggle("responsive");
+  }
   </script>
 </body>
 </html>
