--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1>Paula &amp; Austin</h1>
-      <p class="date">September 20, 2025 &middot; Barcelona, Spain</p>
+      <p class="date">September 6, 2025 &middot; Tielmes, Madrid</p>
     </div>
   </section>
 
