--- a/index_es.html
+++ b/index_es.html
@@ -28,7 +28,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1>Paula &amp; Austin</h1>
-      <p class="date">20 de Septiembre de 2025 &middot; Barcelona, España</p>
+      <p class="date">6 de Septiembre de 2025 &middot; Tielmes, Madrid</p>
     </div>
   </section>
 
