--- a/index_es.html
+++ b/index_es.html
@@ -20,7 +20,7 @@
     <a href="#accommodations">Alojamiento</a>
     <a href="#faqs">Preguntas Frecuentes</a>
     <a href="#rsvp">RSVP</a>
-    <a href="#party">Cortejo</a>
+    <a href="#party">Noviquipo</a>
     <div class="lang-switch"><a href="index.html">EN</a></div>
     
   </div>
@@ -91,7 +91,7 @@
 
   <section id="party" class="section">
     <div class="container">
-      <h2>Cortejo</h2>
+      <h2>Noviquipo</h2>
       <div class="party-grid">
         <div class="party-column">
           <h3>Damas de Honor</h3>
