--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <a href="#location">Location</a>
     <a href="#schedule">Schedule</a>
     <a href="#transport">Transport</a>
-    <a href="#accommodations">Accommodations</a>
+    <a href="#Lodging">Lodging</a>
     <a href="#faqs">FAQs</a>
     <a href="#rsvp">RSVP</a>
-    <a href="#party">Wedding Party</a>
+    <a href="#party">Minions</a>
     <div class="lang-switch"><a href="index_es.html">ES</a></div>
     
   </div>
@@ -56,7 +56,7 @@
     </div>
   </section>
 
-  <section id="accommodations" class="section">
+  <section id="Lodging" class="section">
     <div class="container">
       <h2>Where To Stay</h2>
       <ul>
@@ -90,7 +90,8 @@
 
   <section id="party" class="section">
     <div class="container">
-      <h2>Wedding Party</h2>
+      <h2>Minions</h2>
+      <h2>(The wedding party)</h2>
       <div class="party-grid">
         <div class="party-column">
           <h3>Bride's Party</h3>
