first clean up spanish

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
     <div class="container">
       <br><br>
       <h2>Hoteles</h2>
-      <p>Hay varios hoteles cerca de la casa rural</p>
+      <p>Hay varios hoteles cerca de la casa rural:</p>
       <ul>
         <li><strong><a href="https://hotel-mirador.net/">Hotel Mirador</a></strong></li>
         <li><strong><a href="https://www.hotel-bb.com/es/hotel/madrid-arganda">B&B Hotel Madrid Arganda</a></strong></li>
         <li><strong><a href="https://www.sercotelhoteles.com/es/hotel-ab-arganda">Sercotel Arganda</a></strong></li>
       </ul>
-      <p>Como solo estamos a media hora de Madrid, se aconeseja disfrutar del capital también</p>
+      <p>Como solo estamos a media hora de Madrid, se aconseja disfrutar del capital también.</p>
     </div>
   </section>
 
@@ -77,9 +77,8 @@
     <div class="container">
       <h2>Preguntas Frecuentes</h2>
       <ul>
-        <li><strong>Alergias a alimentos:</strong> Indícanos las intolerancias y alergias en el QR de la invitación o en el enlace que te hemos enviado.
-.</li>
-        <li><strong>Clima:</strong>La boda es en exterior. Al ser finales de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante. .</li>
+        <li><strong>Alergias a alimentos:</strong> Indícanos las intolerancias y alergias en el QR de la invitación o en el enlace que te hemos enviado.</li>
+        <li><strong>Clima:</strong>La boda es en exterior. Al ser finales de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante.</li>
         <li><strong>¿Hasta qué fecha puedo confirmar mi asistencia? </strong>Hasta el 15 de Julio.</li>
         <li><strong>¿Quién puede ir a la boda?</strong>Debido a la limitada capacidad de la casa rural, sólo está invitada la gente nombrada en la invitación. (Es lo que tiene tener una familia tan grande)</li>
         <li><strong>¿Cuál es el menú? </strong>¿Cuál es el menú? Aperetivos, paella (de tres tipos diferentes) y postre.</li>
@@ -87,7 +86,7 @@
 
   <br><br>
   <h1>Código de Vestimenta: Cóctel</h1>
-
+  <p><em>¿Qué es un código de vestimenta de cóctel? Esto dice internet:</em><p></p>   
   <p>
     Un código de vestimenta tipo <strong>cóctel</strong> es más informal, ideal para bodas de día o eventos al aire libre. Suele ser una combinación de elegancia y comodidad. Se utiliza para muchas ocasiones: eventos empresariales, bodas, bautizos, cenas, inauguraciones…  
     Se podrían quitar la chaqueta durante el evento.
@@ -117,14 +116,15 @@
     <div class="container">
       <br><br>
       <h2>Asistencia</h2>
-      <p>Por favor, confirma tu asistencia antes del 15 de agosto de 2025.</p>
-      <a class="rsvp-button" href="https://docs.google.com/forms/d/e/1FAIpQLSfcuDdrSCkzxDUazfjiVlcNsiPWtVq-KbfY52aH65mgKh8neQ/viewform" target="_blank" rel="noopener">Dinos que vengas aquí</a>
+      <p>Por favor, confirma tu asistencia antes del 15 de julio de 2025.</p>
+      <a class="rsvp-button" href="https://docs.google.com/forms/d/e/1FAIpQLSfcuDdrSCkzxDUazfjiVlcNsiPWtVq-KbfY52aH65mgKh8neQ/viewform" target="_blank" rel="noopener">Para confirmar pincha aquí </a>
     </div>
   </section>
 
   <section id="party" class="section">
     <div class="container">
       <h2>Noviquipo</h2>
+      <h2>(Equipo de los novios)</h2>
       <div class="party-grid">
         <div class="party-column">
           <h3>Damas de Honor</h3>
