--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <li><strong><a href="https://www.hotel-bb.com/es/hotel/madrid-arganda">B&B Hotel Madrid Arganda</a></strong></li>
         <li><strong><a href="https://www.sercotelhoteles.com/es/hotel-ab-arganda">Sercotel Arganda</a></strong></li>
       </ul>
-      <p>Como solo estamos a media hora de Madrid, se aconseja disfrutar del capital también.</p>
+      <p>Como solo estamos a media hora de Madrid, se aconseja disfrutar de la capital también.</p>
     </div>
   </section>
 
@@ -81,7 +81,7 @@
         <li><strong>Clima:</strong>La boda es en exterior. Al ser finales de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante.</li>
         <li><strong>¿Hasta qué fecha puedo confirmar mi asistencia? </strong>Hasta el 15 de Julio.</li>
         <li><strong>¿Quién puede ir a la boda?</strong>Debido a la limitada capacidad de la casa rural, sólo está invitada la gente nombrada en la invitación. (Es lo que tiene tener una familia tan grande)</li>
-        <li><strong>¿Cuál es el menú? </strong>¿Cuál es el menú? Aperetivos, paella (de tres tipos diferentes) y postre.</li>
+        <li><strong>¿Cuál es el menú? </strong> Aperitivos, paella (de tres tipos diferentes) y postre.</li>
         <li><strong>Si tengo más preguntas, ¿a quién contacto? </strong><br>Puedes contactarnos por correo electrónico: paulayaustin @ gmail.com</li>
 
   <br><br>
