--- a/index_en.html
+++ b/index_en.html
@@ -15,7 +15,6 @@
     
     <a href="#location">Venue</a>
     <a href="#schedule">Schedule</a>
-    <a href="#transport">Transit</a>
     <a href="#Lodging">Lodging</a>
     <a href="#faqs">FAQs</a>
     <a href="#rsvp">RSVP</a>
@@ -50,37 +49,57 @@
     </div>
   </section>
 
-  <section id="transport" class="section">
-    <br> <br>
-    <div class="container">
-      <h2>Getting To &amp; From</h2>
-      <p>We recommend taxis or ride-shares from the city center. Shuttle buses depart Tielmes station at 4:00 PM. Free on-site parking available.</p>
-    </div>
-  </section>
 
   <section id="Lodging" class="section">
-    <br> <br>
     <div class="container">
-      <h2>Where To Stay</h2>
-      <ul>
-        <li><strong>Hotel Rural Vega:</strong> Charming inn next to venue.</li>
-        <li><strong>Posada La Venta:</strong> Historic inn in town center.</li>
-        <li><strong>Hostal Madrid:</strong> Affordable lodging nearby.</li>
+      <br><br>
+      <h2>Where to stay</h2>
+      <p>There are several hotels near the venue:</p>
+      <ul> 
+        <li><strong><a href="https://www.hotel-bb.com/en/hotel/madrid-arganda">B&B Hotel Madrid Arganda</a></strong></li>
+        <li><strong><a href="https://www.sercotelhoteles.com/en/hotel-ab-arganda">Sercotel Arganda</a></strong></li>
+        <li><strong><a href="https://hotel-mirador.net/">Hotel Mirador</a></strong></li>
       </ul>
-      <p>Use code <em>PAULA-AUSTIN</em> for 10% off.</p>
+      <p>Alternately we suggest you take advantage of the venue's proximity to Madrid! Explore the Plaza Mayor, The Rastro, or get your art on at the Prado and Thyssen. Madrid is a wonderful city to explore when you come to celebrate our day and is only a half hour away by car!</p>
     </div>
   </section>
 
+  
   <section id="faqs" class="section">
     <br> <br>
     <div class="container">
       <h2>FAQs</h2>
       <ul>
-        <li><strong>Dress Code:</strong> Cocktail attire; light fabrics.</li>
-        <li><strong>Dietary:</strong> Let us know of allergies on RSVP.</li>
-        <li><strong>Children:</strong> Adults-only please.</li>
-        <li><strong>Weather:</strong> Outdoors; backup indoors if rain.</li>
-      </ul>
+        <li><strong>When do I have to RSVP by:</strong>Please RSVP by July 15th. <br> If you need more time please reach out to us independently. </li>
+        <br>
+        <li><strong>Food allergies:</strong>Please let us know about any intolerances or allergies via the QR code on the invitation or the link we sent you.</li>
+        <br>
+        <li><strong>Who is invited to the wedding?</strong>Due to the limited capacity of the venue, only those named on the invitation are invited. <em>(Austin has learned that marrying into a Spanish family means he now has a very big family)</em></li>
+        <br>
+        <li><strong>Weather:</strong>The wedding will take place outdoors. Since it’s late September, it will most likely be warm, with temperatures between 25–30°C (77-88˚F). We recommend sunscreen and, if you like, a stylish hat. We'd also recommend a light jacket for the later evening.</li>
+        <br>
+        <li><strong>What’s on the menu?</strong>We'll have tapas to start, and then move on to three types of Paella. Desert is a surprise.</li>
+        <br>
+        <li><strong>Is there a gift list ore registry?</strong>No, but if you’d like to contribute to our honeymoon, we’ve set up a Paypal in the invitation.</li>
+        <br>
+        <li><strong>Will people sitting near me speak my language?</strong>Fret not, we'll make sure that everyone has someone to talk to.</li>
+        <br>
+        <li><strong>Still have questions?</strong> <br>Feel free to email us at: paulayaustin @ gmail.com</li>
+      
+      <br><br>
+  <h1>Dresscode: Cocktail attire</h1>
+  <p><em>What is cocktail attire? Here’s what the internet says:</em><p></p>   
+  <p>
+    Cocktail attire is a more relaxed dress code, ideal for daytime weddings or outdoor events. It blends elegance with comfort and is common at many occasions: business events, weddings, baptisms, dinners, openings… 
+    It’s generally acceptable to remove your jacket during the event..
+  </p>
+
+  <h3>Men (Caballeros)</h3>
+  <br>
+  <p> You can wear a suit or a combination of dress shirt and trousers with a blazer. Ties or bowties are optional and can be colorful or patterned.</p>
+  <h3>Women (Damas)</h3>
+  <br>
+  <p> You can choose a short, midi (knee-length), or long dress, or go for a stylish skirt, blouse, or dressy trousers. Heels are welcome (but not required), and accessories should be tasteful rather than flashy.</p>
     </div>
   </section>
 
@@ -88,7 +107,7 @@
     <br> <br>
     <div class="container">
       <h2>RSVP</h2>
-      <p>Please RSVP by August 1, 2025.</p>
+      <p>Please RSVP by July 15, 2025.</p>
       <a class="rsvp-button" href="https://docs.google.com/forms/d/e/1FAIpQLSfmCC_hWDIu2__PvNuB7-MGk09hlwsT5Uy0V-ZfHIFCgb7ccg/viewform" target="_blank" rel="noopener">RSVP Here</a>
     </div>
   </section>
