--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       <ul>
         <li><strong>Alergias a alimentos:</strong> Indícanos las intolerancias y alergias en el QR de la invitación o en el enlace que te hemos enviado.</li>
         <br>
-        <li><strong>Clima:</strong>La boda es en exterior. Al ser finales de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante.</li>
+        <li><strong>Clima:</strong>La boda es en exterior. Al ser principios de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante. Por la noche puede llegar a 15 grados centígrados, por si queréis traer una chaquetita. 
+</li>
         <br>
         <li><strong>¿Hasta qué fecha puedo confirmar mi asistencia? </strong>Hasta el 15 de Julio.</li>
         <br>
@@ -91,25 +92,21 @@
 
   <br><br>
   <h1>Código de Vestimenta: Cóctel</h1>
-  <p><em>¿Qué es un código de vestimenta de cóctel? Esto dice internet:</em><p></p>   
+  <p><em>Nosotros también lo buscamos en Google, y esto es lo que entendimos:</em><p></p>   
   <p>
-    Un código de vestimenta tipo <strong>cóctel</strong> es más informal, ideal para bodas de día o eventos al aire libre. Suele ser una combinación de elegancia y comodidad. Se utiliza para muchas ocasiones: eventos empresariales, bodas, bautizos, cenas, inauguraciones…  
-    Se podrían quitar la chaqueta durante el evento.
+    Es ese punto medio mágico entre ir elegante y no morir de calor ni incomodidad. 
+    Ideal para bodas de día o al aire libre, como la nuestra. Básicamente: arréglate, pero no sufras.
   </p>
 
   <h3>Hombres</h3>
-  <ul>
-    <li>Traje completo <em>(americana + pantalón)</em> o conjunto de camisa y pantalón de vestir con americana/blazer.</li>
-    <li>Corbata o pajarita <strong>(opcional)</strong>, pueden ser de colores o estampadas.</li>
-  </ul>
-
+  <br>
+  <p>Un traje siempre queda bien, pero también vale una camisa bonita con pantalón de vestir y una americana. 
+    ¿Corbata o pajarita? Solo si te apetece (¡y si combina con tu flow!). Y sí, te puedes quitar la chaqueta cuando empiece el bailoteo.</p>
   <h3>Mujeres</h3>
-  <ul>
-    <li>Vestidos cortos, midi (hasta la rodilla) o largos.</li>
-    <li>Faldas, blusas o pantalones elegantes.</li>
-    <li>Tacones <strong>(imprescindibles o a elección)</strong> y accesorios discretos.</li>
-  </ul>
-
+  <p>Vestidos cortos, midi, largos… todo vale. También faldas, blusas o pantalones elegantes. Tacones si te gustan, pero si prefieres bailar sin dolor, unas sandalias monas también son perfectas. 
+    Los accesorios mejor elegantes pero sin pasarse—no hace falta parecer que vas a los Goya.</p>
+    <br>
+    <p>En resumen: guap@s sí, pero cómod@s también.</p>
 
 
       </ul>
@@ -121,7 +118,7 @@
     <div class="container">
       <br><br>
       <h2>Asistencia</h2>
-      <p>Por favor, confirma tu asistencia antes del 15 de julio de 2025.</p>
+      <p style="text-align: center;">Por favor, confirma tu asistencia antes del 15 de julio de 2025.</p>
       <a class="rsvp-button" href="https://docs.google.com/forms/d/e/1FAIpQLSfcuDdrSCkzxDUazfjiVlcNsiPWtVq-KbfY52aH65mgKh8neQ/viewform" target="_blank" rel="noopener">Para confirmar pincha aquí </a>
     </div>
   </section>
