--- a/index_en.html
+++ b/index_en.html
@@ -38,7 +38,24 @@
       <p>We'll be celebrating at the "Casa Rural Vega de Tielmes"</p>
       <p>Calle de Cercado, 28550, Tielmes, Madrid</p>
       <p>It's the first house to the left at the bottom of the hill. You won't miss it.</p>
+      <h2>Getting there</h2>
+      <p>Madrid is a wonderful city with very modern public transit. 
+        If you choose to stay in the city then you can get most of the way by taking Line 9 of the metro to Arganda del Rey.
+        However, since we're getting married in a "casa rural" or rural bed and breakfast it's admittedly a bit out of the way.
+      Once you get to Arganda, you can take the <strong>327 bus</strong> to the center of Tielmes which will leave you ten minutes away walking.
+    Alternately, Spain has both Uber and Taxis which you can hail from either Arganda for a reduced fair, or all the way from Madrid as we're only about 30 minutes away from the city center.</p>
+    <br>
+    <p>Finally, if neither a cab nor Uber are up your alley and you simply want to explore more of the Spanish country side, than renting a car is a great option!</p>
+
+      <img src="images/parking.jpeg" alt="parking" class="schedule-img"/>
+      <p>If taking this final choice you'll be here in no time and we have plenty of parking. We've mapped out where to park for you.</p>
+      <ul><li>In the blue zone there are more spaces and greater availability</li>
+      <li>The green zone has more traffic but you can park anywhere in that area.</li>
+      <br>
+        <em> A final note: </em><strong>Please leave spaces closest to the venue for those with reduced mobility or above the age of 65.</strong>
+    </ul>
       <p><a class="map-link" href="https://www.google.com/maps/place/Casa+Rural+Vega+de+Tielmes/data=!4m2!3m1!1s0x0:0x5cefc6eca5f70925?sa=X&ved=1t:2428&ictx=111" target="_blank" rel="noopener">Find it here on Google Maps</a></p>
+
     </div>
   </section>
 
@@ -76,7 +93,7 @@
         <br>
         <li><strong>Who is invited to the wedding?</strong>Due to the limited capacity of the venue, only those named on the invitation are invited. <em>(Austin has learned that marrying into a Spanish family means he now has a very big family)</em></li>
         <br>
-        <li><strong>Weather:</strong>The wedding will take place outdoors. Since it’s late September, it will most likely be warm, with temperatures between 25–30°C (77-88˚F). We recommend sunscreen and, if you like, a stylish hat. We'd also recommend a light jacket for the later evening.</li>
+        <li><strong>Weather:</strong>The wedding will take place outdoors. Since it’s early September, it will most likely be warm, with temperatures between 25–30°C (77-88˚F). We recommend sunscreen and, if you like, a stylish hat. We'd also recommend a light jacket for the later evening as it can get down to 15˚C (59˚F).</li>
         <br>
         <li><strong>What’s on the menu?</strong>We'll have tapas to start, and then move on to three types of Paella. Desert is a surprise.</li>
         <br>
@@ -88,26 +105,31 @@
       
       <br><br>
   <h1>Dresscode: Cocktail attire</h1>
-  <p><em>What is cocktail attire? Here’s what the internet says:</em><p></p>   
+  <p><em>What is cocktail attire? We asked the internet so you don’t have to:</em><p></p>   
   <p>
-    Cocktail attire is a more relaxed dress code, ideal for daytime weddings or outdoor events. It blends elegance with comfort and is common at many occasions: business events, weddings, baptisms, dinners, openings… 
-    It’s generally acceptable to remove your jacket during the event..
+    Cocktail attire is the sweet spot between “fancy” and “please don’t make me wear a tux.” 
+    It’s perfect for daytime weddings or outdoor events where you want to look sharp and still breathe.
+    <br>
+  <p><strong>In summary: Dress to impress, but don’t stress.</strong><p>
   </p>
-
   <h3>Men (Caballeros)</h3>
   <br>
-  <p> You can wear a suit or a combination of dress shirt and trousers with a blazer. Ties or bowties are optional and can be colorful or patterned.</p>
+  <p>A suit works great, but a dress shirt with nice trousers and a blazer also does the trick. Ties or bowties? Totally optional—feel free to go bold with colors or patterns if you’re feeling festive. And yes, you can ditch the jacket once the dancing starts.</p>
   <h3>Women (Damas)</h3>
-  <br>
-  <p> You can choose a short, midi (knee-length), or long dress, or go for a stylish skirt, blouse, or dressy trousers. Heels are welcome (but not required), and accessories should be tasteful rather than flashy.</p>
-    </div>
+  <p>Short, midi, or long dresses are all fair game. Skirts, blouses, or chic trousers? Absolutely. Heels are welcome (but not required—we love a comfy queen), and accessories should say “elegant guest,” not “I stole this from a red carpet.”</p>
+  
+
+
+  </div>
   </section>
 
   <section id="rsvp" class="section">
     <br> <br>
     <div class="container">
       <h2>RSVP</h2>
-      <p>Please RSVP by July 15, 2025.</p>
+      <p style="text-align: center;">
+  Please RSVP by July 15, 2025.
+</p>
       <a class="rsvp-button" href="https://docs.google.com/forms/d/e/1FAIpQLSfmCC_hWDIu2__PvNuB7-MGk09hlwsT5Uy0V-ZfHIFCgb7ccg/viewform" target="_blank" rel="noopener">RSVP Here</a>
     </div>
   </section>
