--- a/index_en.html
+++ b/index_en.html
@@ -87,21 +87,21 @@
     <div class="container">
       <h2>FAQs</h2>
       <ul>
-        <li><strong>When do I have to RSVP by:</strong>Please RSVP by July 15th. <br> If you need more time please reach out to us independently. </li>
+        <li><strong>When do I have to RSVP by:</strong><strong>July 15th</strong> <br><br> If you need more time please reach out to us independently. </li>
         <br>
-        <li><strong>Food allergies:</strong>Please let us know about any intolerances or allergies via the QR code on the invitation or the link we sent you.</li>
+        <li><strong>Food allergies:</strong><br>Please let us know about any intolerances or allergies via the QR code on the invitation or the link we sent you.</li>
         <br>
-        <li><strong>Who is invited to the wedding?</strong>Due to the limited capacity of the venue, only those named on the invitation are invited. <em>(Austin has learned that marrying into a Spanish family means he now has a very big family)</em></li>
+        <li><strong>Who is invited to the wedding?</strong><br>Due to the limited capacity of the venue, only those named on the invitation are invited. <em>(Austin has learned that marrying into a Spanish family means he now has a very big family)</em></li>
         <br>
-        <li><strong>Weather:</strong>The wedding will take place outdoors. Since it’s early September, it will most likely be warm, with temperatures between 25–30°C (77-88˚F). We recommend sunscreen and, if you like, a stylish hat. We'd also recommend a light jacket for the later evening as it can get down to 15˚C (59˚F).</li>
+        <li><strong>Weather:</strong><br>The wedding will take place outdoors. Since it’s early September, it will most likely be warm, with temperatures between 25–30°C (77-88˚F). We recommend sunscreen and, if you like, a stylish hat. We'd also recommend a light jacket for the later evening as it can get down to 15˚C (59˚F).</li>
         <br>
-        <li><strong>What’s on the menu?</strong>We'll have tapas to start, and then move on to three types of Paella. Desert is a surprise.</li>
+        <li><strong>What’s on the menu?</strong><br>We'll have tapas to start, and then move on to three types of Paella. Desert is a surprise.</li>
         <br>
-        <li><strong>Is there a gift list ore registry?</strong>No, but if you’d like to contribute to our honeymoon, we’ve set up a Paypal in the invitation.</li>
+        <li><strong>Is there a gift list ore registry?</strong><br>No, but if you’d like to contribute to our honeymoon, we’ve set up a Paypal in the invitation.</li>
         <br>
-        <li><strong>Will people sitting near me speak my language?</strong>Fret not, we'll make sure that everyone has someone to talk to.</li>
+        <li><strong>Will people sitting near me speak my language?</strong><br>Fret not, we'll make sure that everyone has someone to talk to.</li>
         <br>
-        <li><strong>Still have questions?</strong> <br>Feel free to email us at: paulayaustin @ gmail.com</li>
+        <li><strong>Still have questions?</strong><br>Feel free to email us at: paulayaustin @ gmail.com</li>
       
       <br><br>
   <h1>Dresscode: Cocktail attire</h1>
