--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
     <div class="container">
       <h2>Preguntas Frecuentes</h2>
       <ul>
-        <li><strong>Alergias a alimentos:</strong> Indícanos las intolerancias y alergias en el QR de la invitación o en el enlace que te hemos enviado.</li>
+        <li><strong>Alergias a alimentos:</strong> <br>Indícanos las intolerancias y alergias en el QR de la invitación o en el enlace que te hemos enviado.</li>
         <br>
-        <li><strong>Clima:</strong>La boda es en exterior. Al ser principios de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante. Por la noche puede llegar a 15 grados centígrados, por si queréis traer una chaquetita. 
+        <li><strong>Clima:</strong><br>La boda es en exterior. Al ser principios de septiembre lo más seguro es que haga calor, de máxima entre unos 25 y 30 grados centígrados. Aconsejamos crema solar y, si te gusta, un sombrero elegante. Por la noche puede llegar a 15 grados centígrados, por si queréis traer una chaquetita. 
 </li>
         <br>
-        <li><strong>¿Hasta qué fecha puedo confirmar mi asistencia? </strong>Hasta el 15 de Julio.</li>
+        <li><strong>¿Hasta qué fecha puedo confirmar mi asistencia? </strong><br>El 15 de Julio.</li>
         <br>
-        <li><strong>¿Quién puede ir a la boda?</strong>Debido a la limitada capacidad de la casa rural, sólo está invitada la gente nombrada en la invitación. (Es lo que tiene tener una familia tan grande)</li>
+        <li><strong>¿Quién puede ir a la boda?</strong><br>Debido a la limitada capacidad de la casa rural, sólo está invitada la gente nombrada en la invitación. (Es lo que tiene tener una familia tan grande)</li>
         <br>
-        <li><strong>¿Cuál es el menú? </strong> Aperitivos, paella (de tres tipos diferentes) y postre.</li>
+        <li><strong>¿Cuál es el menú? </strong><br>Aperitivos, paella (de tres tipos diferentes) y postre.</li>
         <br>
         <li><strong>Si tengo más preguntas, ¿a quién contacto? </strong><br>Puedes contactarnos por correo electrónico: paulayaustin @ gmail.com</li>
 
