--- a/index_en.html
+++ b/index_en.html
@@ -43,9 +43,9 @@
         If you choose to stay in the city then you can get most of the way by taking Line 9 of the metro to Arganda del Rey.
         However, since we're getting married in a "casa rural" or rural bed and breakfast it's admittedly a bit out of the way.
       Once you get to Arganda, you can take the <strong>327 bus</strong> to the center of Tielmes which will leave you ten minutes away walking.
-    Alternately, Spain has both Uber and Taxis which you can hail from either Arganda for a reduced fair, or all the way from Madrid as we're only about 30 minutes away from the city center.</p>
+    Alternately, Spain has both Uber and Taxis which you can hail from either Arganda for a reduced fare, or all the way from Madrid as we're only about 30 minutes away from the city center.</p>
     <br>
-    <p>Finally, if neither a cab nor Uber are up your alley and you simply want to explore more of the Spanish country side, than renting a car is a great option!</p>
+    <p>Finally, if neither a cab nor Uber are up your alley and you simply want to explore more of the Spanish countryside, then renting a car is a great option!</p>
 
       <img src="images/parking.jpeg" alt="parking" class="schedule-img"/>
       <p>If taking this final choice you'll be here in no time and we have plenty of parking. We've mapped out where to park for you.</p>
@@ -87,7 +87,7 @@
     <div class="container">
       <h2>FAQs</h2>
       <ul>
-        <li><strong>When do I have to RSVP by:</strong><strong>July 15th</strong> <br><br> If you need more time please reach out to us independently. </li>
+        <li><strong>When do I have to RSVP by:<br></strong>July 15th<br> If you need more time please reach out to us individually. </li>
         <br>
         <li><strong>Food allergies:</strong><br>Please let us know about any intolerances or allergies via the QR code on the invitation or the link we sent you.</li>
         <br>
@@ -95,16 +95,16 @@
         <br>
         <li><strong>Weather:</strong><br>The wedding will take place outdoors. Since it’s early September, it will most likely be warm, with temperatures between 25–30°C (77-88˚F). We recommend sunscreen and, if you like, a stylish hat. We'd also recommend a light jacket for the later evening as it can get down to 15˚C (59˚F).</li>
         <br>
-        <li><strong>What’s on the menu?</strong><br>We'll have tapas to start, and then move on to three types of Paella. Desert is a surprise.</li>
+        <li><strong>What’s on the menu?</strong><br>We'll have tapas to start, and then move on to three types of Paella. Dessert is a surprise.</li>
         <br>
-        <li><strong>Is there a gift list ore registry?</strong><br>No, but if you’d like to contribute to our honeymoon, we’ve set up a Paypal in the invitation.</li>
+        <li><strong>Is there a gift list or registry?</strong><br>No, but if you’d like to contribute to our honeymoon, we’ve set up a Paypal in the invitation.</li>
         <br>
         <li><strong>Will people sitting near me speak my language?</strong><br>Fret not, we'll make sure that everyone has someone to talk to.</li>
         <br>
         <li><strong>Still have questions?</strong><br>Feel free to email us at: paulayaustin @ gmail.com</li>
       
       <br><br>
-  <h1>Dresscode: Cocktail attire</h1>
+  <h1>Dress code: Cocktail attire</h1>
   <p><em>What is cocktail attire? We asked the internet so you don’t have to:</em><p></p>   
   <p>
     Cocktail attire is the sweet spot between “fancy” and “please don’t make me wear a tux.” 
@@ -116,7 +116,7 @@
   <br>
   <p>A suit works great, but a dress shirt with nice trousers and a blazer also does the trick. Ties or bowties? Totally optional—feel free to go bold with colors or patterns if you’re feeling festive. And yes, you can ditch the jacket once the dancing starts.</p>
   <h3>Women (Damas)</h3>
-  <p>Short, midi, or long dresses are all fair game. Skirts, blouses, or chic trousers? Absolutely. Heels are welcome (but not required—we love a comfy queen), and accessories should say “elegant guest,” not “I stole this from a red carpet.”</p>
+  <p>Short, midi, or long dresses are all fair game. Skirts, blouses, or chic trousers? Absolutely. Heels are welcome (but not required—we love a comfy queen), and accessories should say <em>elegant guest</em>, not <em>I stole this from a red carpet.<em></p>
   
 
 
