--- a/index.html
+++ b/index.html
@@ -84,14 +84,21 @@
         <br>
         <li><strong>¿Hasta qué fecha puedo confirmar mi asistencia? </strong><br>El 15 de Julio.</li>
         <br>
-        <li><strong>¿Quién puede ir a la boda?</strong><br>Debido a la limitada capacidad de la casa rural, sólo está invitada la gente nombrada en la invitación. (Es lo que tiene tener una familia tan grande)</li>
+        <li><strong>¿Quién puede ir a la boda?</strong>
+          <br>Debido a la limitada capacidad de la casa rural, 
+          no podemos incluir más personas de las que hemos nombrado en las invitaciones. 
+          Si tienes mucho interés en que te acompañe alguien en particular, 
+          dínoslo, por si en función de la asistencia confirmada, 
+          podemos sacar un huequito.</li>
         <br>
         <li><strong>¿Cuál es el menú? </strong><br>Aperitivos, paella (de tres tipos diferentes) y postre.</li>
         <br>
         <li><strong>Si tengo más preguntas, ¿a quién contacto? </strong><br>Puedes contactarnos por correo electrónico: paulayaustin @ gmail.com</li>
 
   <br><br>
-  <h1>Código de Vestimenta: Cóctel</h1>
+  <h1>¿Qué me pongo? </h1>
+  <p>Codigo de vestimienta: tipo cóctel.</p>
+
   <p><em>Nosotros también lo buscamos en Google, y esto es lo que entendimos:</em><p></p>   
   <p>
     Es ese punto medio mágico entre ir elegante y no morir de calor ni incomodidad. 
@@ -145,7 +152,7 @@
           <div class="party-item"><img src="images/bestmen/jamie.jpg" alt="Jamie"/><p>Jamie</p></div>
           <div class="party-item"><img src="images/bestmen/maxime.jpeg" alt="Maxime"/><p>Maxime</p></div>
           <div class="party-item"><img src="images/bestmen/alba.jpeg" alt="Alba"/><p>Alba</p></div>
-          <div class="party-item"><img src="images/bestmen/guille.jpeg" alt="Guille"/><p>Tim</p></div>
+          <div class="party-item"><img src="images/bestmen/guille.jpeg" alt="Guille"/><p>Guille</p></div>
           <div class="party-item"><img src="images/bestmen/noah.jpeg" alt="Noah"/><p>Noah</p></div>
         </div>
       </div>
