change dress code

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       <h2>Hoteles</h2>
       <p>Hay varios hoteles cerca de la casa rural:</p>
       <ul>
-        <li><strong><a href="https://hotel-mirador.net/">Hotel Mirador</a></strong></li>
         <li><strong><a href="https://www.hotel-bb.com/es/hotel/madrid-arganda">B&B Hotel Madrid Arganda</a></strong></li>
         <li><strong><a href="https://www.sercotelhoteles.com/es/hotel-ab-arganda">Sercotel Arganda</a></strong></li>
+        <li><strong><a href="https://hotel-mirador.net/">Hotel Mirador</a></strong></li>
       </ul>
       <p>Como solo estamos a media hora de Madrid, se aconseja disfrutar de la capital también.</p>
     </div>
@@ -99,7 +99,7 @@
   <h1>¿Qué me pongo? </h1>
   <p>Codigo de vestimienta: tipo cóctel.</p>
 
-  <p><em>Nosotros también lo buscamos en Google, y esto es lo que entendimos:</em><p></p>   
+  <p><em>¿Qué significa tipo cóctel?<br></em>Nosotros también lo buscamos en Google, y esto es lo que entendimos:<p></p>   
   <p>
     Es ese punto medio mágico entre ir elegante y no morir de calor ni incomodidad. 
     Ideal para bodas de día o al aire libre, como la nuestra. Básicamente: arréglate, pero no sufras.
