--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="#location">Sitio</a>
     <a href="#schedule">Planning</a>
     <a href="#accommodations">Hoteles</a>
-    <a href="#faqs">Preguntas Frecuentes</a>
+    <a href="#faqs">Preguntas</a>
     <a href="#rsvp">Asistencia</a>
     <a href="#party">Noviquipo</a>
     <div class="lang-switch"><a href="index_en.html">EN</a></div>
